[workspace]
resolver = "2"
members = [
  "crates/jiff",
  "crates/jiff-cli",
  "crates/jiff-core",
  "crates/jiff-static",
  "crates/jiff-tzdb",
  "crates/jiff-tzdb-platform",
]

[workspace.package]
authors = ["Andrew Gallant <jamslam@gmail.com>"]
edition = "2021"
rust-version = "1.70"

# This is just like the default 'test' profile, but debug_assertions are
# disabled. This is important to cover for Jiff because we do a lot of extra
# work in our internal ranged integer types when debug_assertions are enabled.
# It also makes types fatter. It's very useful for catching overflow bugs.
# But since there's a fair bit of logic there, it's also worth running tests
# without debug_assertions enabled to exercise the *actual* code paths used
# in production.
[profile.testrelease]
inherits = "test"
debug-assertions = false

[profile.test]
# Some of our tests can take a while without some optimizations enabled. In
# particular, tests that check the validity of every date. It seems just
# `opt-level = 1` is enough to make those pretty snappy.
opt-level = 1
