[package]
name = "jiff-tzdb"
version = "0.1.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
license = "Unlicense OR MIT"
homepage = "https://github.com/BurntSushi/jiff/tree/master/jiff-tzdb"
repository = "https://github.com/BurntSushi/jiff"
documentation = "https://docs.rs/jiff-tzdb"
description = "The entire Time Zone Database embedded into your binary."
categories = ["date-and-time"]
workspace = ".."
edition = "2021"
rust-version = "1.70"

[lib]
name = "jiff_tzdb"
bench = false
path = "lib.rs"
