[package]
name = "sqlx-jiff"
version = "0.1.0"
license = "Unlicense OR MIT"
homepage = "https://github.com/BurntSushi/jiff/tree/master/sqlx-jiff"
repository = "https://github.com/BurntSushi/jiff"
documentation = "https://docs.rs/sqlx-jiff"
description = "Integration to use jiff structs for datetime types in sqlx."
categories = ["date-and-time"]
keywords = ["date", "time", "temporal", "zone", "iana"]
workspace = ".."
edition = "2021"
rust-version = "1.70"

[features]
default = []
postgres = ["sqlx/postgres"]

[dependencies]
jiff = { path = ".." }
serde = { version = "1.0" }
sqlx = { version = "0.8" }
