[package]
name = "jiff-chrono"
version = "0.1.0"  #:version
authors = ["Rito Takeuchi <licht-t@outlook.jp>"]
license = "Unlicense OR MIT"
homepage = "https://github.com/BurntSushi/jiff/tree/master/crates/jiff-chrono"
repository = "https://github.com/BurntSushi/jiff"
documentation = "https://docs.rs/jiff-chrono"
description = "Conversion routines between Jiff and chrono."
categories = ["date-and-time"]
keywords = ["date", "time", "temporal", "zone", "chrono"]
edition = "2021"
rust-version = "1.70"
include = ["/src/*.rs", "COPYING", "LICENSE-MIT", "UNLICENSE"]

# Integration crates in Jiff are explicitly isolated from the workspace to
# avoid dependencies accumulating. I was originally motivated to do this
# because rustc kept getting stun-locked compiling diesel. And this was somehow
# happening every time I saved a file inside of Jiff proper. So I just ragequit
# including everything in the same workspace and put integration crates (and
# examples) into their own little bloated fiefdoms.
[workspace]

[lib]
name = "jiff_chrono"
bench = false
path = "src/lib.rs"

[features]
default = ["std"]
std = ["alloc", "jiff/std", "chrono/std"]
alloc = ["jiff/alloc", "chrono/alloc"]
# Enables conversions between `jiff::Zoned` and `chrono::DateTime<chrono_tz::Tz>`.
# Requires `std`, since `chrono-tz` requires `std`.
chrono-tz = ["dep:chrono-tz", "std"]
# Passthrough that enables `serde` on both `jiff` and `chrono`. This crate
# defines no `serde` impls itself; users serialize native types on each side.
serde = ["jiff/serde", "chrono/serde"]

[dependencies]
jiff = { version = "0.2.11", path = "../..", default-features = false }
chrono = { version = "0.4.38", default-features = false }
chrono-tz = { version = "0.10", optional = true }

[dev-dependencies]
jiff = { version = "0.2.11", path = "../..", default-features = true }
chrono = { version = "0.4.38" }
chrono-tz = "0.10"
quickcheck = { version = "1.0.3", default-features = false }

[package.metadata.docs.rs]
# We want to document all features.
all-features = true
# Since this crate's feature setup is pretty complicated, it is worth opting
# into a nightly unstable option to show the features that need to be enabled
# for public API items. To do that, we set `docsrs_jiff`, and when that's
# enabled, we enable the 'doc_cfg' feature.
#
# To test this locally, run:
#
#     RUSTDOCFLAGS="--cfg docsrs_jiff" cargo +nightly doc --all-features
#
# Note that we use `docsrs_jiff` instead of the more standard `docsrs` because
# other crates use that same `cfg` knob. And since we are enabling a nightly
# feature, they sometimes break. By using our "own" `cfg` knob, we are closer
# to being masters of our own destiny.
rustdoc-args = ["--cfg", "docsrs_jiff"]

# This squashes the (AFAIK) erroneous warning that `docsrs_jiff` is not a
# valid `cfg` knob.
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(docsrs_jiff)'] }
