[package]
publish = false
name = "jiff-cli"
version = "0.0.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line tool for supporting the development of the Jiff datetime
library. Currently, this tool is not published and only used for development
purposes. (For example, generating the data for the `jiff-tzdb` crate.)
"""
repository = "https://github.com/BurntSushi/jiff/tree/master/crates/jiff-cli"
keywords = ["cli", "jiff", "date", "time", "datetime"]
license = "Unlicense OR MIT"
categories = ["date-and-time"]
autotests = false
edition = "2021"
rust-version = "1.79"
workspace = "../.."

[[bin]]
name = "jiff-cli"
path = "main.rs"

[features]
default = []

[dependencies]
anyhow = "1.0.28"
bstr = "1.9.1"
jiff = { path = "../..", features = ["logging"] }
lexopt = "0.3.0"
log = { version = "0.4.17", features = ["std"] }
regex-lite = "0.1.6"
textwrap = { version = "0.16.1", default-features = false }
walkdir = "2.5.0"
