[package]
name = "jiff-diesel"
version = "0.1.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
license = "Unlicense OR MIT"
homepage = "https://github.com/BurntSushi/jiff/tree/master/crates/jiff-diesel"
repository = "https://github.com/BurntSushi/jiff"
documentation = "https://docs.rs/jiff-diesel"
description = "Integration for Jiff with Diesel."
categories = ["date-and-time"]
keywords = ["date", "time", "jiff", "diesel", "zone"]
edition = "2021"
rust-version = "1.70"
include = ["/src/*.rs", "COPYING", "LICENSE-MIT", "UNLICENSE"]

# Integration crates in Jiff are explicitly isolated from the workspace to
# avoid dependencies accumulating. I was originally motivated to do this
# because rustc kept getting stun-locked compiling diesel. And this was somehow
# happening every time I saved a file inside of Jiff proper. So I just ragequit
# including everything in the same workspace and put integration crates (and
# examples) into their own little bloated fiefdoms.
[workspace]

[lib]
name = "jiff_diesel"
bench = false
path = "src/lib.rs"

[features]
default = []
mysql = ["diesel/mysql_backend"]
postgres = ["diesel/postgres_backend"]
sqlite = ["diesel/sqlite"]

[dependencies]
jiff = { version = "0.2.0", path = "../..", default-features = false, features = ["std"] }
diesel = { version = "2.0.0", default-features = false }

[dev-dependencies]
jiff = { version = "0.2.0", path = "../..", default-features = true }
