[package]
name = "jiff-icu"
version = "0.2.0-beta.2"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
license = "Unlicense OR MIT"
homepage = "https://github.com/BurntSushi/jiff/tree/master/crates/jiff-icu"
repository = "https://github.com/BurntSushi/jiff"
documentation = "https://docs.rs/jiff-icu"
description = "Conversion routines between Jiff and ICU4X."
categories = ["date-and-time"]
keywords = ["date", "time", "temporal", "zone", "icu"]
edition = "2021"
rust-version = "1.82"
include = ["/src/*.rs", "/*.dat", "COPYING", "LICENSE-MIT", "UNLICENSE"]

# Integration crates in Jiff are explicitly isolated from the workspace to
# avoid dependencies accumulating. I was originally motivated to do this
# because rustc kept getting stun-locked compiling diesel. And this was somehow
# happening every time I saved a file inside of Jiff proper. So I just ragequit
# including everything in the same workspace and put integration crates (and
# examples) into their own little bloated fiefdoms.
[workspace]

[lib]
name = "jiff_icu"
bench = false
path = "src/lib.rs"

[features]
default = ["alloc", "time"]
alloc = ["jiff/alloc", "icu_calendar/alloc", "icu_time?/alloc"]
time = ["dep:icu_time"]

[dependencies]
jiff = { version = "0.2.11", path = "../..", default-features = false }
icu_calendar = { version = "2.0.0-beta.2", default-features = false }
icu_time = { version = "2.0.0-beta.2", optional = true, default-features = false }

[dev-dependencies]
jiff = { version = "0.2.11", path = "../..", default-features = true }
icu = { version = "2.0.0-beta.2" }
