[package]
name = "jiff-sqlx"
version = "0.1.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
license = "Unlicense OR MIT"
homepage = "https://github.com/BurntSushi/jiff/tree/master/crates/jiff-sqlx"
repository = "https://github.com/BurntSushi/jiff"
documentation = "https://docs.rs/jiff-sqlx"
description = "Integration for Jiff with SQLx."
categories = ["date-and-time"]
keywords = ["date", "time", "jiff", "sqlx", "zone"]
edition = "2021"
rust-version = "1.70"
include = ["/src/*.rs", "/*.dat", "COPYING", "LICENSE-MIT", "UNLICENSE"]

# Integration crates in Jiff are explicitly isolated from the workspace to
# avoid dependencies accumulating. I was originally motivated to do this
# because rustc kept getting stun-locked compiling diesel. And this was somehow
# happening every time I saved a file inside of Jiff proper. So I just ragequit
# including everything in the same workspace and put integration crates (and
# examples) into their own little bloated fiefdoms.
[workspace]

[lib]
name = "jiff_sqlx"
bench = false
path = "src/lib.rs"

[features]
default = []
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
# The `std` feature is necessary for the `std::error::Error` impl.
jiff = { version = "0.2.0", path = "../..", default-features = false, features = ["std"] }
sqlx = { version = "0.8.0", default-features = false }

[dev-dependencies]
jiff = { version = "0.2.0", path = "../..", default-features = true }
