[package]
name = "jiff-tzdb"
version = "0.1.8"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
license = "Unlicense OR MIT"
homepage = "https://github.com/BurntSushi/jiff/tree/master/crates/jiff-tzdb"
repository = "https://github.com/BurntSushi/jiff"
documentation = "https://docs.rs/jiff-tzdb"
description = "The entire Time Zone Database embedded into your binary."
categories = ["date-and-time"]
keywords = ["date", "time", "temporal", "zone", "iana"]
workspace = "../.."
include = ["/*.rs", "/*.dat", "COPYING", "LICENSE-MIT", "UNLICENSE"]
edition.workspace = true
rust-version.workspace = true

[lib]
name = "jiff_tzdb"
bench = false
path = "lib.rs"
