[package]
publish = false
name = "diesel-mysql-test"
version = "0.0.1"
edition = "2021"

# Examples in Jiff are explicitly isolated from the workspace to avoid
# dev-dependencies accumulating. (Not all examples have big dependency trees,
# but we still exclude them from the workspace as a general rule.)
[workspace]

[dependencies]
anyhow = "1.0.95"
diesel = { version = "2.2.0", features = ["mysql"] }
jiff = { path = "../.." }
jiff-diesel = { path = "../../crates/jiff-diesel", features = ["mysql"] }

[[bin]]
name = "diesel-mysql-test"
path = "main.rs"
