[package]
publish = false
name = "diesel-postgres-test"
version = "0.0.1"
edition = "2021"

# This example has very fat dependencies. And running it requires a PostgreSQL
# dataabase connection. This makes it so this example won't get compiled or run
# with `cargo test --all`.
[workspace]

[dependencies]
anyhow = "1.0.95"
diesel = { version = "2.2.0", features = ["postgres"] }
jiff = { path = "../.." }
jiff-diesel = { path = "../../crates/jiff-diesel", features = ["postgres"] }

[[bin]]
name = "diesel-postgres-test"
path = "main.rs"
