[package]
publish = false
name = "diesel-sqlite-test"
version = "0.0.1"
edition = "2021"

# This example has very fat dependencies. This makes it so this example won't
# get compiled or run with `cargo test --all`.
[workspace]

[dependencies]
anyhow = "1.0.95"
diesel = { version = "2.2.0", features = [
    "returning_clauses_for_sqlite_3_35",
    "sqlite",
] }
jiff = { path = "../.." }
jiff-diesel = { path = "../../crates/jiff-diesel", features = ["sqlite"] }
tempfile = "3.16.0"

[[bin]]
name = "diesel-sqlite-test"
path = "main.rs"
